--- a/index.html
+++ b/index.html
@@ -13,11 +13,10 @@
     </header>
     <main>
       <nav>
-        Навигация
+        Навигация <a href="day-1.html">День 1.<a>
       </nav>
       <section>
-        <p>Всем привет! Добро пожаловать на мой первый сайт. Ещё недавно я понятия не имел, кто такой верстальщик, а теперь я нашёл интерактивные курсы по HTML и CSS и поставил перед собой цель — стать им. У меня даже появился инструктор — Кекс, который не позволит мне расслабиться и будет следить за моими успехами.</p>
-        <p>Моё первое задание — вести дневник и честно писать обо всех своих свершениях.</p>
+        <p>Всем привет! Добро пожаловать на мой первый сайт. Здесь я возможно буду постить свои успехи в вёрстке.</p>
       </section>
       <section>
         Раздел про навыки
